# Matupiri_v1

./: .gitattributes  .gitignore  Esqueleto.txt  README.md  db.py  pyproject.toml  requirements.txt
app/: __init__.py  db.py  main.py
app/components/: __init__.py  cards.py  filters.py  forms.py  layout.py  map.py
app/data_access/: __init__.py  bridge_legacy_db.py  repositories.py  storage.py
app/models/: __init__.py  policy.py  region.py  requirement.py  user_profile.py
app/pages/: 1_Home.py  2_Cadastro.py  3_Políticas_Públicas_Cadastradas.py  4_Resultado_auto.py  5_Resultado_manual.py  6_Login_e_Salvar_Perfil.py  7_Observatório.py  8_Credits_app.py  9_Política_de_Dados.py  __init__.py
app/services/: __init__.py  defeso_calendar.py  geo.py  policies_engine.py  search_index.py  uc_catalog.py
app/utils/: __init__.py  cache.py  config.py  dates.py  text.py  validators_br.py
data/: README.md
data/docs/: README.md  data_contracts.yaml  data_dictionary_policies.md
data/ibge/: municipios.csv  ufs.csv
data/processed/: README.md  defesos.csv  municipios.csv  policies.xlsx  policies_index.csv  policies_master.csv  policy_contacts.xlsx  policy_documents.xlsx  policy_financial_params.xlsx  policy_regions.xlsx  (+9 more)
etl/: __init__.py  common.py  defesos_to_processed.py  fetch_ibge_geo.py  ibge_fix_municipios.py  ibge_from_shapefile.py  make_index.py  make_policies_catalog.py  policies_to_processed.py  run_all.py  ucs_to_processed.py  validate_data.py
infra/: Dockerfile  README.md  docker-compose.yml  streamlit_secrets.example.toml
tests/: __init__.py  conftest.py  test_data_access_repositories.py  test_models.py  test_pages_smoke.py  test_services_defeso_calendar.py  test_services_policies_engine.py  test_services_search_index.py  test_utils_validators_dates.py
(+12 files in other folders)
